--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/mbottalico1/Friend-Finder/issues"
   },
-  "homepage": "https://github.com/mbottalico1/Friend-Finder#readme"
+  "homepage": "https://github.com/mbottalico1/Friend-Finder#readme",
+  "dependencies": {
+    "body-parser": "^1.17.2",
+    "express": "^4.15.3",
+    "path": "^0.12.7"
+  }
 }
